# img-editor

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  package-lock.json  package.json  tauri.conf.json
.cargo/: config.toml
examples/: test_serde.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/services/: tauri.ts
icons/: create_simple_png.sh
specs/: 0001-init-spec.md  0002-design.md  instructions.md
specs/002-img-editor-design/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/002-img-editor-design/contracts/: tauri-commands.md  types.ts
src/: lib.rs  main.rs
src/commands/: export_commands.rs  image_commands.rs  mod.rs
src/core/: export_engine.rs  history_manager.rs  image_processor.rs  mod.rs
src/core/operations/: adjustments.rs  crop.rs  filters.rs  mod.rs  transform.rs
src/state/: image_state.rs  mod.rs
src/types/: commands.rs  errors.rs  mod.rs  operations.rs
src/utils/: base64.rs  mod.rs  preview.rs
