[package]
name = "img-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core
tauri = { version = "2.9", features = [] }
tauri-plugin-dialog = "2.0"

# Image Processing
image = { version = "0.25", features = ["png", "jpeg", "gif", "bmp", "ico", "webp", "tiff", "rayon"] }
imageproc = "0.25"

# Concurrency
rayon = "1.10"
arc-swap = "1"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
base64 = "0.22"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
